--- a/src/app.html
+++ b/src/app.html
@@ -3,16 +3,10 @@
   <require from="./resources/elements/categories/categories"></require>
   
   <nav-bar router.bind="router"></nav-bar>
-
-  <div class="container">
-    
-    <div class="row">   
-      <div class="col-md-8"> 
-        <router-view></router-view>
-      </div>
-      <div class="col-md-4">
-        <categories></categories>
-      </div>
+  <router-view></router-view>
+  <footer class="wrapper">
+    <div class="copyright">
+      Copyright © <a href="https://SteveHartzog.github.io">Steve Hartzog</a>. 2017 • All rights reserved.
     </div>
-  </div>
+  </footer>
 </template>
