--- a/src/resources/elements/nav-bar.html
+++ b/src/resources/elements/nav-bar.html
@@ -1,4 +1,4 @@
-<template bindable="router, name, cover, quote"> 
+<template bindable="router, name, scroll, cover, quote"> 
   <header class="title">
 		<a href="/"><i class="fa fa-bookmark-o fa-lg"></i><span>${router.title}</span></a>
 	</header>
@@ -20,6 +20,6 @@
 		<header class="wrapper">
 			<p></p>
 		</header>
-		<i class="fa fa-chevron-down movedown"></i>
+		<i onclick.call="scroll('pageStart', 750)" class="fa fa-chevron-down movedown"></i>
   </div>
 </template>
