feat(config): migrating over to new config files

--- a/src/app.html
+++ b/src/app.html
@@ -2,13 +2,13 @@
   <require from="./resources/elements/nav-bar.html"></require>
   <require from="./resources/elements/categories/categories"></require>
 
-  <nav-bar router.bind="router" name.bind="bConf.name" scroll.bind="smoothScrollTo" cover.bind="bConf.coverImage" quote.bind="bConf.authorQuote"></nav-bar>
+  <nav-bar router.bind="router" name.bind="config.siteName" scroll.bind="smoothScrollTo" cover.bind="config.coverImage" quote.bind="config.siteBlurb"></nav-bar>
   
   <router-view id="pageStart"></router-view>
   
   <footer class="wrapper">
     <div class="copyright">
-      Copyright © <a href="${bConf.url}">${bConf.name}</a>. 2017 • All rights reserved.
+      Copyright © <a href="${bConf.url}">${config.siteName}</a>. 2017 • All rights reserved.
     </div>
   </footer>
 </template>
