--- a/src/pages/post.html
+++ b/src/pages/post.html
@@ -20,10 +20,10 @@
         </ul>
       </footer>
       <div class="authorProfile">
-        <img class="avatar" alt="${post.postedBy}" src="/images/${bConf.avatarImage}">
+        <img class="avatar" alt="${post.postedBy}" src="/images/${config.avatar}">
         <div class="info">
           <h4>${post.postedBy}</h4>
-          <a href="${bConf.url}">${bConf.url}</a>
+          <a href="${bConf.url}">${config.url}</a>
           <p></p>
           
           <ul class="social">
