fix(app) regression #6

--- a/src/resources/elements/nav-bar.html
+++ b/src/resources/elements/nav-bar.html
@@ -12,7 +12,7 @@
       <div class="toggle"><a href="#"><i class="fa fa-bars"></i></a></div>
     </div>
 	</nav>
-  <div show.bind="router.currentInstruction.config.name === 'home'" class="cover post indexfeature featured" id="cover">
+  <div id="cover" show.bind="router.currentInstruction.config.name === 'home'" class="cover post indexfeature featured" id="cover">
 		<div class="background" style="background-image: url('./images/${cover}');">
       <span class="background-title">${name}</span>
       <span class="background-quote">${quote}</span>
