feat(setup): more default content to be inserted

--- a/src/setup/setup.html
+++ b/src/setup/setup.html
@@ -6,6 +6,7 @@
       </header>
       
       <p><button type="button" click.delegate="addTestUser()">Add a user</button></p>
+      <p><button type="button" click.delegate="populateCategories()">Populate Categories</button></p>
       <p><button type="button" click.delegate="populatePosts()">Populate posts</button></p>
     </article>
   </section>
