--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -1,8 +1,15 @@
 <template>
   <div repeat.for="post of posts" show.bind="!post">
     <div class="blog-post">
-      <h1 class="blog-post-title"><a href="/posts/${post.url}">${post.title}</a></h1>
-      <p class="blog-post-meta">${post.posted} by <a href="#/bloggers/${post.postedBy}">${post.postedBy}</a> <template repeat.for="cat of post.categories"><a href="#/category/${cat}" class="categoryLink">${cat}</a> </template></p>
+      <h1 class="blog-post-title">
+        <a href="/posts/${post.url}">${post.title}</a>
+      </h1>
+      <p class="blog-post-meta">${post.posted} by
+        <a href="#/bloggers/${post.postedBy}">${post.postedBy}</a>
+        <template repeat.for="cat of post.categories">
+          <a href="#/category/${cat}" class="categoryLink">${cat}</a>
+        </template>
+      </p>
       <p class="lead blog-description">${post.description}</p>
       <!--<div innerhtml="${md.renderInline(post.body)}"></div>       -->
     </div>
