--- a/src/resources/elements/nav-bar.html
+++ b/src/resources/elements/nav-bar.html
@@ -1,34 +1,29 @@
-<template bindable="router, author, scroll, cover, quote, siteTitle, contentTitle">
+<template bindable="router, author, siteTitle, contentTitle, isCover">
   <header class="title">
-		<a href="/"><i class="fa fa-bookmark-o fa-lg"></i><span>${router.title}</span></a>
-	</header>
+    <a href="/">
+      <i class="fa fa-bookmark-o fa-lg"></i>
+      <span>Home</span>
+    </a>
+  </header>
+  <div id="titlebar" class="titlebar" if.bind="contentTitle.length > 0">
+    <h1>${contentTitle}</h1>
+  </div>
+  <div id="titlebar" class="titlebar" if.bind="contentTitle.length === 0">
+    <h1>${siteTitle}</h1>
+    <h2>${author}</h2>
+  </div>
   <nav class="mainnav${router.currentInstruction.config.name === 'home' ? ' home' : ''}">
     <div class="navwrap">
-      <ul class="menu">
+      <ul class="menu ${isCover ? 'cover' : ''}">
         <li repeat.for="row of router.navigation" class="nav-item ${row.isActive ? 'nav-current' : ''}" role="presentation">
           <a href.bind="row.href">${row.title}</a>
         </li>
       </ul>
-      <div class="toggle"><a href="#"><i class="fa fa-bars"></i></a></div>
+      <div class="toggle">
+        <a href="#">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
     </div>
-	</nav>
-  <div id="cover" show.bind="router.currentInstruction.config.name === 'home'" class="cover post indexfeature featured" id="cover">
-		<div class="background" style="background-image: url('./images/${cover}');">
-      <span class="background-title">${author}</span>
-      <span class="background-quote">${quote}</span>
-    </div>
-		<header class="wrapper">
-			<p></p>
-		</header>
-		<i onclick.call="scroll('pageStart', 750)" class="fa fa-chevron-down movedown"></i>
-  </div>
-  <div id="titlebar" class="titlebar">
-		<div class="wrapper" if.bind="contentTitle.length > 0">
-      <h2 class="right">${contentTitle}
-		</div>
-		<div class="wrapper" if.bind="contentTitle.length === 0">
-			<h1 class="left">${siteTitle}</h1>
-      <h2 class="right">${author}
-		</div>
-	</div>
+  </nav>
 </template>
