Temporarily prevent redirect

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Single Page Apps for GitHub Pages</title>
-    <script type="text/javascript">
+<!--     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
       // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
@@ -33,7 +33,7 @@
         l.hash
       );
 
-    </script>
+    </script> -->
   </head>
   <body>
   </body>
